syntax = "proto3";

package cunicu.rpc;
option go_package = "github.com/stv0g/cunicu/pkg/proto/rpc";

import "common.proto";
import "signaling/signaling.proto";
import "feature/epdisc.proto";

enum EventType {    
    // Signaling Events
    BACKEND_READY = 0;
    SIGNALING_MESSAGE = 1;

    // Core Events
    PEER_ADDED = 10;
    PEER_REMOVED = 11;
    PEER_MODIFIED = 12;

    INTERFACE_ADDED = 20;
    INTERFACE_REMOVED = 21;
    INTERFACE_MODIFIED = 22;

    // ICE Events
    PEER_CONNECTION_STATE_CHANGED = 30;
}

message Event {
    EventType type = 1;
    Timestamp time = 2;

    // Public key of peer which triggerd the event
    bytes peer = 3;

    // Interface name which triggered the event
    string interface = 4;

    oneof event {
        SignalingBackendReadyEvent backend_ready = 100;

        PeerConnectionStateChangeEvent peer_connection_state_change = 121;
        PeerModifiedEvent peer_modified = 122;
        InterfaceModifiedEvent interface_modified = 123;
    }
}

message PeerModifiedEvent {
    uint32 modified = 1;   
}

message InterfaceModifiedEvent {
    uint32 modified = 1;
}

message PeerConnectionStateChangeEvent {
    epdisc.ConnectionState new_state = 1;
    epdisc.ConnectionState prev_state = 2;
}

message SignalingBackendReadyEvent {
    signaling.BackendType type = 1;
}
